--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js"
-  },
+  "dev": "nodemon src/index.js",
+  "test": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest --detectOpenHandles --forceExit"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -17,6 +17,11 @@
     "mongoose": "^8.19.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "cross-env": "^10.1.0",
+    "jest": "^30.2.0",
+    "jest-esm-transformer": "^1.0.0",
+    "mongodb-memory-server": "^10.2.3",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.4"
   }
 }
