--- a/package.json
+++ b/package.json
@@ -5,18 +5,21 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-  "dev": "nodemon src/index.js",
-  "test": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest --detectOpenHandles --forceExit"
-},
+    "dev": "nodemon src/index.js",
+    "test": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest --detectOpenHandles --forceExit"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongoose": "^8.19.2"
+    "mongoose": "^8.19.2",
+    "next-themes": "^0.4.6"
   },
   "devDependencies": {
+    "@types/node": "^24.10.0",
+    "@types/react": "^19.2.2",
     "cross-env": "^10.1.0",
     "jest": "^30.2.0",
     "jest-esm-transformer": "^1.0.0",
