--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
+  "$schema": "https://json.schemastore.org/package.json",
   "name": "backendservice",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "test": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest --detectOpenHandles --forceExit"
+    "dev": "cd frontend && pnpm run dev",
+    "build": "cd frontend && pnpm run build",
+    "start": "cd frontend && pnpm run start",
+    "lint": "cd frontend && pnpm run lint",
+    "test": "cd frontend && pnpm run test",
+    "test:watch": "cd frontend && pnpm run test:watch",
+    "test:coverage": "cd frontend && pnpm run test:coverage",
+    "dev:backend": "nodemon backend/index.js",
+    "test:backend": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest --detectOpenHandles --forceExit"
   },
   "keywords": [],
   "author": "",
